# PhillOS

./: .env.example  AGENTS.md  App.tsx  LICENSE  README.md  build.ps1  eslint.config.js  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  types.ts  vite.config.ts
android/: README.md  controller.ts  package_versions.json  setup-microg.sh  setup-playstore.sh
backend/: citationKB.json  db.js  protonLauncher.js  protonLauncher.ts  sandboxShield.js  server.js
bootloader/: Makefile  build.sh  main.c  phill_svg_loader.c  phill_svg_loader.h  phill_svg_update.c  phill_svg_update.h
cli/: index.ts  phillos-cli.ts  phillos.ts  sdk.ts
components/: AgentConsole.tsx  BootScreen.tsx  Dock.tsx  GlassCard.tsx  HomeDashboard.tsx  MemoryHub.tsx  MemorySettings.tsx  MobileBottomNavigationBar.tsx  PhoneApp.tsx  ProtonLauncher.tsx  StatusBar.tsx
contexts/: MemoryHubContext.tsx  PhoneContext.tsx  StorageProvider.tsx  ThemeContext.tsx
docs/: Blueprint.md  agent_commands.md  agent_mode_walkthrough.md  ai_providers.md  apps.md  building.md  cursor_themes.md  driver_development.md  driver_system.md  getting_started.md  install.md  kernel_cli_api.md  lock_screen.md  offline.md  settings.md  vkd3d.md
drivers/: builtin.c  builtin.h  driver.c  driver.h  driver_manager.c  driver_manager.h  query_dev.c  query_dev.h  register.c  register.h
hooks/: useCloudSync.ts  useDeviceType.ts  useDock.ts  useOnboarding.ts  usePhoneBridge.ts  (+2 more)
kernel/: debug.c  (+20 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tests.rs
(+361 files in other folders)
