[package]
name = "phillos_tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [
    "fs-read-dir",
    "fs-read-file",
    "fs-copy-file",
    "path-all"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gstreamer = "0.22"
gstreamer-app = "0.22"
once_cell = "1"
