[package]
name = "phillos_tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", default-features = false, features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
